Skill learning update
