# rest_rpg/src/main/java/com/michael1099/rest_rpg/skill/SkillController.java
@@ -2,6 +2,7 @@ package com.michael1099.rest_rpg.skill;
 
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.SkillApi;
+import org.openapitools.model.CharacterSkillBasics;
 import org.openapitools.model.SkillBasicPage;
 import org.openapitools.model.SkillCreateRequest;
 import org.openapitools.model.SkillDetails;
@@ -37,5 +38,15 @@ public class SkillController implements SkillApi {
     @Override
     public ResponseEntity<SkillLites> getSkills() {
         return ResponseEntity.ok(skillService.getSkills());
+    }
+
+    @Override
+    public ResponseEntity<CharacterSkillBasics> getCharacterSkills(Long characterId) {
+        return ResponseEntity.ok(skillService.getCharacterSkills(characterId));
+    }
+
+    @Override
+    public ResponseEntity<SkillLite> learnSkill(Long skillId, Long characterId) {
+        return ResponseEntity.ok(skillService.learnSkill(skillId, characterId));
     }
 }
