# rest_rpg/src/main/java/com/michael1099/rest_rpg/skill/model/SkillCreateRequestDto.java
@@ -30,6 +30,10 @@ public class SkillCreateRequestDto {
 
     int effectDurationPerLevel;
 
+    int goldCost;
+
+    int statisticPointsCost;
+
     float effectMultiplier;
 
     float effectMultiplierPerLevel;
